--- a/.htaccess
+++ b/.htaccess
@@ -1,7 +1,7 @@
 ## contrôle du cache navigateur - Expire headers
 <IfModule mod_expires.c>
 	ExpiresActive On
-	ExpiresDefault "access plus 7200 seconds"
+	ExpiresDefault "access plus 1 year"
 	ExpiresByType image/jpg 			"access plus 1 year"
 	ExpiresByType image/jpeg 			"access plus 1 week"
 	ExpiresByType image/png 			"access plus 1 week"
@@ -14,7 +14,7 @@
 	ExpiresByType image/x-icon 			"access plus 1 week"
 	ExpiresByType text/css 				"access plus 1 week"
 	ExpiresByType text/javascript 		"access plus 1 week"
-	ExpiresByType text/html 			"access plus 7200 seconds"
+	ExpiresByType text/html 			"access plus 1 year"
 	ExpiresByType application/xhtml+xml 	"access plus 7200 seconds"
 	ExpiresByType application/javascript 	"access plus 1 week"
 	ExpiresByType application/x-javascript 	"access plus 1 week"
