--- a/.htaccess
+++ b/.htaccess
@@ -1,22 +1,16 @@
-## contrôle du cache navigateur - Expire headers
-<IfModule mod_expires.c>
-	ExpiresActive On
-	ExpiresDefault "access plus 1 year"
-	ExpiresByType image/jpg 			"access plus 1 year"
-	ExpiresByType image/jpeg 			"access plus 1 week"
-	ExpiresByType image/png 			"access plus 1 week"
-	ExpiresByType image/gif 			"access plus 1 week"
-    ExpiresByType image/webp 			"access plus 1 year"
-	ExpiresByType image/svg+xml			"access plus 1 week"
-	AddType image/x-icon .ico
-	ExpiresByType image/ico 			"access plus 1 week"
-	ExpiresByType image/icon 			"access plus 1 week"
-	ExpiresByType image/x-icon 			"access plus 1 week"
-	ExpiresByType text/css 				"access plus 1 week"
-	ExpiresByType text/javascript 		"access plus 1 week"
-	ExpiresByType text/html 			"access plus 1 year"
-	ExpiresByType application/xhtml+xml 	"access plus 7200 seconds"
-	ExpiresByType application/javascript 	"access plus 1 week"
-	ExpiresByType application/x-javascript 	"access plus 1 week"
-	ExpiresByType application/x-shockwave-flash "access plus 1 week"
-</IfModule>
+## EXPIRES CACHING ##
+ <IfModule mod_expires.c>
+ ExpiresActive On
+ ExpiresByType image/jpg "access plus 1 year"
+ ExpiresByType image/jpeg "access plus 1 year"
+ ExpiresByType image/gif "access plus 1 year"
+ ExpiresByType image/png "access plus 1 year"
+ExpiresByType image/svg "access plus 1 year"
+ ExpiresByType text/css "access plus 1 month"
+ ExpiresByType application/pdf "access plus 1 month"
+ ExpiresByType text/x-javascript "access plus 1 month"
+ ExpiresByType application/x-shockwave-flash "access plus 1 month"
+ ExpiresByType image/x-icon "access plus 1 year"
+ ExpiresDefault "access plus 7 days"
+ </IfModule>
+ ## EXPIRES CACHING ##
